<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.1</version>
    </parent>

    <groupId>net.github.fast</groupId>
    <artifactId>fast-dev</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <modules>
        <module>spring-mybatis-ctx</module>
        <module>spring-cache-ctx</module>
        <module>spring-scaffold</module>
        <module>spring-swagger-ctx</module>
        <module>archetype/spring-cloud-archetype</module>
        <module>custom-spring-scaffolds</module>
        <module>spring-distributed-lock-ctx</module>
        <module>custom-component</module>
    </modules>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <java.version>25</java.version>

        <maven.compiler.target>25</maven.compiler.target>
        <fast-dev.version>3.0-jdk25-SNAPSHOT</fast-dev.version>
        <revision>${fast-dev.version}</revision>
        <spring.version>4.1.1</spring.version>
        <!-- Spring Boot 4.0.0 manages Jackson 3.0.2; use the Jackson 3.1 LTS line. -->
        <springdoc.version>3.1.1</springdoc.version>
        <knife4j.version>4.6.0</knife4j.version>
        <hutool.version>5.8.38</hutool.version>
        <spring-cloud-dependencies.version>2025.1.0</spring-cloud-dependencies.version>
        <spring-cloud-alibaba-dependencies.version>2025.1.0.0</spring-cloud-alibaba-dependencies.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <dependencyManagement>

        <dependencies>
            <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-boot-starter -->

            <dependency>
                <groupId>com.necloud</groupId>
                <artifactId>newland-spring-scaffold-ctx</artifactId>
                <version>${fast-dev.version}</version>
            </dependency>

            <dependency>
                <groupId>com.necloud</groupId>
                <artifactId>newland-spring-webflux-scaffold-ctx</artifactId>
                <version>${fast-dev.version}</version>
            </dependency>

            <dependency>
                <groupId>com.necloud</groupId>
                <artifactId>newland-spring-scaffold-annotation</artifactId>
                <version>${fast-dev.version}</version>
            </dependency>

            <dependency>
                <groupId>net.github.fast</groupId>
                <artifactId>spring-mybatis-ctx-annotation</artifactId>
                <version>${fast-dev.version}</version>
            </dependency>

            <dependency>
                <groupId>net.github.fast</groupId>
                <artifactId>spring-mybatis-ctx-starter</artifactId>
                <version>${fast-dev.version}</version>
            </dependency>


            <dependency>
                <groupId>net.github.fast</groupId>
                <artifactId>common-info</artifactId>
                <version>${fast-dev.version}</version>
            </dependency>

            <dependency>
                <groupId>net.github.fast</groupId>
                <artifactId>spring-framework-scaffold-starter</artifactId>
                <version>${fast-dev.version}</version>
            </dependency>
            <dependency>
                <groupId>net.github.fast</groupId>
                <artifactId>spring-framework-cloud-scaffold-starter</artifactId>
                <version>${fast-dev.version}</version>
            </dependency>


            <dependency>
                <groupId>net.github.fast</groupId>
                <artifactId>spring-swagger-ctx-starter</artifactId>
                <version>${fast-dev.version}</version>
            </dependency>

            <dependency>
                <groupId>net.github.fast</groupId>
                <artifactId>spring-swagger-ctx-annotation</artifactId>
                <version>${fast-dev.version}</version>
            </dependency>

            <dependency>
                <groupId>net.github.fast</groupId>
                <artifactId>spring-cache-redis-ctx</artifactId>
                <version>${fast-dev.version}</version>
            </dependency>


            <!--分布式锁依赖-->
            <dependency>
                <groupId>net.github.fast</groupId>
                <artifactId>spring-distributed-lock-redis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.github.fast</groupId>
                <artifactId>spring-distributed-lock-zookeeper</artifactId>
                <version>${project.version}</version>
            </dependency>


            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>5.8.38</version>
            </dependency>

            <dependency>
                <groupId>org.javers</groupId>
                <artifactId>javers-core</artifactId>
                <version>7.11.8</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>2.0.65</version>
            </dependency>

            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>1.80</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>public</id>
            <name>public</name>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <url>http://192.168.133.162:9081/repository/maven-public/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>releases Repository</name>
            <url>http://192.168.133.162:9081/repository/maven-releases/</url>
        </repository>

        <snapshotRepository>
            <id>snapshots</id>
            <url>http://192.168.133.162:9081/repository/maven-snapshots/</url>
            <uniqueVersion>true</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>


</project>
